# face_recognition_android

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/align/: aligner.cpp  aligner.h
app/src/main/cpp/face_detection/: SCRFD.cpp  SCRFD.h  model_load.h
app/src/main/cpp/face_extraction/: extract.cpp  extract.h
app/src/main/cpp/utils/: utils.cpp  utils.h
app/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
